test/1.2/errors/T_ESYNTAX_19.dml
/*
  © 2021-2022 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;

device test;

// In a nothrow default method, the keywords must appear in that order.
/// ERROR ESYNTAX
method m() default nothrow {
}
